truncate fix

--- a/resources/assets/sass/components/_sidebar.scss
+++ b/resources/assets/sass/components/_sidebar.scss
@@ -151,6 +151,7 @@
       width: 90%;
       overflow: hidden;
       text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
   .url-lighter {
